--- a/src/main/resources/application/paymentTransaction.fxml
+++ b/src/main/resources/application/paymentTransaction.fxml
@@ -14,7 +14,10 @@
       <Button mnemonicParsing="false" onAction="#confirm" text="Confirm" BorderPane.alignment="CENTER">
          <BorderPane.margin>
             <Insets bottom="8.0" top="8.0" />
-         </BorderPane.margin></Button>
+         </BorderPane.margin>
+         <font>
+            <Font name="Courier New" size="12.0" />
+         </font></Button>
    </bottom>
    <top>
       <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
@@ -22,20 +25,23 @@
             <Button mnemonicParsing="false" onAction="#returnToPreviousScene" text="Back">
                <HBox.margin>
                   <Insets left="8.0" top="8.0" />
-               </HBox.margin></Button>
-            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="81.0" prefWidth="512.0" text="Payment Transaction" textAlignment="CENTER">
+               </HBox.margin>
                <font>
-                  <Font size="27.0" />
+                  <Font name="Courier New" size="12.0" />
+               </font></Button>
+            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="81.0" prefWidth="492.0" text="PAYMENT TRANSACTION" textAlignment="CENTER" textFill="#126f19">
+               <font>
+                  <Font name="Courier New Bold" size="27.0" />
                </font></Label>
          </children>
       </HBox>
    </top>
    <center>
       <TableView fx:id="tblTransaction" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-        <columns>
-          <TableColumn fx:id="contentColumn" prefWidth="75.0" text="Content" />
-          <TableColumn fx:id="depositColumn" prefWidth="75.0" text="Deposit" />
-        </columns>
+         <columns>
+            <TableColumn fx:id="contentColumn" prefWidth="75.0" text="Content" />
+            <TableColumn fx:id="depositColumn" prefWidth="75.0" text="Deposit" />
+         </columns>
       </TableView>
    </center>
 </BorderPane>
