--- a/src/main/resources/application/DockInfoView.fxml
+++ b/src/main/resources/application/DockInfoView.fxml
@@ -1,45 +1,110 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.DockInfoViewController">
-   <children>
-      <VBox prefHeight="338.0" prefWidth="360.0" AnchorPane.rightAnchor="0.0">
-         <children>
-            <HBox prefHeight="100.0" prefWidth="200.0">
-               <children>
-                  <Text fx:id="dockNameText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
-                  <Button fx:id="returnButton" alignment="CENTER" mnemonicParsing="false" onAction="#returnToDockList" text="Return" textAlignment="CENTER" />
-               </children>
-            </HBox>
-            <GridPane prefHeight="342.0" prefWidth="445.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <Text fx:id="tx0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
-                  <Text fx:id="tx1" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="1" />
-                  <Text fx:id="tx2" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="2" />
-                  <Text fx:id="tx3" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.rowIndex="1" />
-                  <Text fx:id="tx4" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <Text fx:id="tx5" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                  <Text fx:id="tx6" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.rowIndex="2" />
-                  <Text fx:id="tx7" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <Text fx:id="tx8" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-               </children>
-            </GridPane>
-         </children>
-      </VBox>
-   </children>
+<AnchorPane prefHeight="386.0" prefWidth="415.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.DockInfoViewController">
+    <children>
+        <VBox prefHeight="366.0" prefWidth="418.0" AnchorPane.rightAnchor="0.0">
+            <children>
+                <HBox prefHeight="27.0" prefWidth="350.0">
+                    <children>
+                        <Button fx:id="returnButton" alignment="CENTER" mnemonicParsing="false" onAction="#returnToDockList" text="Return" textAlignment="CENTER">
+                            <font>
+                                <Font name="Courier New" size="12.0" />
+                            </font>
+                            <HBox.margin>
+                                <Insets top="1.0" />
+                            </HBox.margin></Button>
+                    </children>
+                    <VBox.margin>
+                        <Insets left="10.0" top="5.0" />
+                    </VBox.margin>
+                    <padding>
+                        <Insets bottom="10.0" />
+                    </padding>
+                </HBox>
+                <HBox prefHeight="42.0" prefWidth="406.0" style="-fx-background-color: #81c483; -fx-opacity: 80%;">
+                    <children>
+                        <Text fx:id="dockNameText" fill="WHITE" smooth="false" stroke="#4124fcbf" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-opacity: 100%;" text="Text" textAlignment="CENTER" wrappingWidth="377.13671875">
+                            <font>
+                                <Font name="Courier New" size="14.0" />
+                            </font>
+                        </Text>
+                    </children>
+                    <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                    </padding>
+                </HBox>
+                <GridPane prefHeight="242.0" prefWidth="398.0">
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                    <children>
+                        <Text fx:id="tx0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                            <font>
+                                <Font name="Courier New" size="12.0" />
+                            </font>
+                        </Text>
+                        <Text fx:id="tx1" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="1">
+                            <font>
+                                <Font name="Courier New" size="12.0" />
+                            </font>
+                        </Text>
+                        <Text fx:id="tx2" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="2">
+                            <font>
+                                <Font name="Courier New" size="12.0" />
+                            </font>
+                        </Text>
+                        <Text fx:id="tx3" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.rowIndex="1">
+                            <font>
+                                <Font name="Courier New" size="12.0" />
+                            </font></Text>
+                        <Text fx:id="tx4" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                            <font>
+                                <Font name="Courier New" size="12.0" />
+                            </font>
+                        </Text>
+                        <Text fx:id="tx5" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                            <font>
+                                <Font name="Courier New" size="12.0" />
+                            </font></Text>
+                        <Text fx:id="tx6" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.rowIndex="2">
+                            <font>
+                                <Font name="Courier New" size="12.0" />
+                            </font>
+                        </Text>
+                        <Text fx:id="tx7" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                            <font>
+                                <Font name="Courier New" size="12.0" />
+                            </font>
+                        </Text>
+                        <Text fx:id="tx8" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                            <font>
+                                <Font name="Courier New" size="12.0" />
+                            </font>
+                        </Text>
+                    </children>
+                    <VBox.margin>
+                        <Insets left="10.0" top="10.0" />
+                    </VBox.margin>
+                </GridPane>
+            </children>
+        </VBox>
+    </children>
 </AnchorPane>
