--- a/src/main/resources/application/DockView.fxml
+++ b/src/main/resources/application/DockView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -8,80 +9,178 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="388.0" prefWidth="580.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.DockViewController">
+<AnchorPane prefHeight="403.0" prefWidth="402.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.DockViewController">
    <children>
-      <VBox prefHeight="388.0" prefWidth="580.0">
+      <VBox layoutX="2.0" prefHeight="388.0" prefWidth="395.0">
          <children>
-            <HBox prefHeight="100.0" prefWidth="200.0">
+            <HBox prefHeight="30.0" prefWidth="378.0">
                <children>
-                  <TextField fx:id="searchBarField" />
-                  <Button fx:id="searchButton" mnemonicParsing="false" onAction="#search" text="Search" />
+                  <Text fill="#126f19" strokeType="OUTSIDE" strokeWidth="0.0" text="BIKE RENTAL SYSTEM" textAlignment="CENTER" underline="true" wrappingWidth="396.125">
+                     <font>
+                        <Font name="Courier New" size="18.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets top="10.0" />
+                     </HBox.margin>
+                  </Text>
                </children>
+               <VBox.margin>
+                  <Insets top="2.0" />
+               </VBox.margin>
             </HBox>
-            <GridPane alignment="CENTER_RIGHT" prefHeight="354.0" prefWidth="545.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
+            <HBox prefHeight="53.0" prefWidth="507.0">
                <children>
-                  <VBox onMouseClicked="#onClick" prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="0">
+                  <TextField fx:id="searchBarField">
+                     <HBox.margin>
+                        <Insets left="8.0" />
+                     </HBox.margin></TextField>
+                  <Button fx:id="searchButton" mnemonicParsing="false" onAction="#search" text="Search">
+                     <font>
+                        <Font name="Courier New" size="12.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="5.0" top="1.0" />
+                     </HBox.margin>
+                  </Button>
+               </children>
+               <VBox.margin>
+                  <Insets top="20.0" />
+               </VBox.margin>
+            </HBox>
+            <GridPane alignment="CENTER_RIGHT" prefHeight="241.0" prefWidth="403.0" style="-fx-background-color: #a9d4ab; -fx-background-radius: 7%;">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               </rowConstraints>
+               <children>
+                  <VBox alignment="CENTER_LEFT" onMouseClicked="#onClick" prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="0">
                      <children>
-                        <Text fx:id="tx00" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+                        <Text fx:id="tx00" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                           <font>
+                              <Font name="Courier New" size="12.0" />
+                           </font>
+                        </Text>
                      </children>
+                     <GridPane.margin>
+                        <Insets left="8.0" right="8.0" />
+                     </GridPane.margin>
                   </VBox>
-                  <VBox onMouseClicked="#onClick" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1">
+                  <VBox alignment="CENTER_LEFT" onMouseClicked="#onClick" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1">
                      <children>
-                        <Text fx:id="tx01" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+                        <Text fx:id="tx01" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                           <font>
+                              <Font name="Courier New" size="12.0" />
+                           </font>
+                        </Text>
                      </children>
+                     <GridPane.margin>
+                        <Insets left="8.0" />
+                     </GridPane.margin>
                   </VBox>
-                  <VBox onMouseClicked="#onClick" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2">
+                  <VBox alignment="CENTER_LEFT" onMouseClicked="#onClick" prefHeight="81.0" prefWidth="152.0" GridPane.columnIndex="2">
                      <children>
-                        <Text fx:id="tx02" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+                        <Text fx:id="tx02" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                           <font>
+                              <Font name="Courier New" size="12.0" />
+                           </font>
+                        </Text>
                      </children>
+                     <GridPane.margin>
+                        <Insets left="8.0" />
+                     </GridPane.margin>
                   </VBox>
-                  <VBox onMouseClicked="#onClick" prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="1">
+                  <VBox alignment="CENTER_LEFT" onMouseClicked="#onClick" prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="1">
                      <children>
-                        <Text fx:id="tx03" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+                        <Text fx:id="tx03" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                           <font>
+                              <Font name="Courier New" size="12.0" />
+                           </font>
+                        </Text>
                      </children>
+                     <GridPane.margin>
+                        <Insets left="8.0" />
+                     </GridPane.margin>
                   </VBox>
-                  <VBox onMouseClicked="#onClick" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                  <VBox alignment="CENTER_LEFT" onMouseClicked="#onClick" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <children>
-                        <Text fx:id="tx04" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+                        <Text fx:id="tx04" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                           <font>
+                              <Font name="Courier New" size="12.0" />
+                           </font>
+                        </Text>
                      </children>
+                     <GridPane.margin>
+                        <Insets left="8.0" />
+                     </GridPane.margin>
                   </VBox>
-                  <VBox onMouseClicked="#onClick" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                  <VBox alignment="CENTER_LEFT" onMouseClicked="#onClick" prefHeight="81.0" prefWidth="121.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
                      <children>
-                        <Text fx:id="tx05" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+                        <Text fx:id="tx05" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                           <font>
+                              <Font name="Courier New" size="12.0" />
+                           </font>
+                        </Text>
                      </children>
+                     <GridPane.margin>
+                        <Insets left="8.0" />
+                     </GridPane.margin>
                   </VBox>
-                  <VBox onMouseClicked="#onClick" prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="2">
+                  <VBox alignment="CENTER_LEFT" onMouseClicked="#onClick" prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="2">
                      <children>
-                        <Text fx:id="tx06" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+                        <Text fx:id="tx06" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                           <font>
+                              <Font name="Courier New" size="12.0" />
+                           </font>
+                        </Text>
                      </children>
+                     <GridPane.margin>
+                        <Insets left="8.0" />
+                     </GridPane.margin>
                   </VBox>
-                  <VBox onMouseClicked="#onClick" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                  <VBox alignment="CENTER_LEFT" onMouseClicked="#onClick" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                      <children>
-                        <Text fx:id="tx07" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+                        <Text fx:id="tx07" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                           <font>
+                              <Font name="Courier New" size="12.0" />
+                           </font>
+                        </Text>
                      </children>
+                     <GridPane.margin>
+                        <Insets left="8.0" />
+                     </GridPane.margin>
                   </VBox>
-                  <VBox onMouseClicked="#onClick" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                  <VBox alignment="CENTER_LEFT" onMouseClicked="#onClick" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
                      <children>
-                        <Text fx:id="tx08" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+                        <Text fx:id="tx08" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                           <font>
+                              <Font name="Courier New" size="12.0" />
+                           </font>
+                        </Text>
                      </children>
+                     <GridPane.margin>
+                        <Insets left="8.0" />
+                     </GridPane.margin>
                   </VBox>
                </children>
             </GridPane>
-            <HBox prefHeight="100.0" prefWidth="200.0">
+            <HBox prefHeight="46.0" prefWidth="401.0">
                <children>
-                  <Button mnemonicParsing="false" onAction="#goToDockInfoView" text="View Dock" />
+                  <Button mnemonicParsing="false" onAction="#goToDockInfoView" prefHeight="25.0" prefWidth="81.0" text="View Dock">
+                     <HBox.margin>
+                        <Insets left="8.0" top="10.0" />
+                     </HBox.margin>
+                     <font>
+                        <Font name="Courier New" size="12.0" />
+                     </font></Button>
                </children>
             </HBox>
          </children>
