--- a/src/main/resources/application/ReturnView.fxml
+++ b/src/main/resources/application/ReturnView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -16,66 +17,126 @@
          <children>
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <TextField fx:id="searchBarField" />
-                  <Button fx:id="searchButton" mnemonicParsing="false" onAction="#search" text="Search" />
+                  <TextField fx:id="searchBarField">
+                     <HBox.margin>
+                        <Insets left="2.0" top="8.0" />
+                     </HBox.margin></TextField>
+                  <Button fx:id="searchButton" mnemonicParsing="false" onAction="#search" text="Search">
+                     <HBox.margin>
+                        <Insets left="2.0" top="8.0" />
+                     </HBox.margin></Button>
                </children>
             </HBox>
-            <GridPane alignment="CENTER_RIGHT" prefHeight="354.0" prefWidth="545.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <GridPane alignment="CENTER_RIGHT" prefHeight="265.0" prefWidth="580.0" style="-fx-background-color: #a9d4ab; -fx-background-radius: 7%;">
+               <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               </rowConstraints>
                <children>
-                  <VBox onMouseClicked="#onClick" prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="0">
+                  <VBox alignment="CENTER_LEFT" onMouseClicked="#onClick" prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="0">
                      <children>
                         <Text fx:id="tx00" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
                      </children>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <GridPane.margin>
+                        <Insets left="5.0" />
+                     </GridPane.margin>
                   </VBox>
-                  <VBox onMouseClicked="#onClick" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1">
+                  <VBox alignment="CENTER_LEFT" onMouseClicked="#onClick" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1">
                      <children>
                         <Text fx:id="tx01" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
                      </children>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <GridPane.margin>
+                        <Insets left="5.0" />
+                     </GridPane.margin>
                   </VBox>
-                  <VBox onMouseClicked="#onClick" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2">
+                  <VBox alignment="CENTER_LEFT" onMouseClicked="#onClick" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2">
                      <children>
                         <Text fx:id="tx02" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
                      </children>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <GridPane.margin>
+                        <Insets left="5.0" />
+                     </GridPane.margin>
                   </VBox>
-                  <VBox onMouseClicked="#onClick" prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="1">
+                  <VBox alignment="CENTER_LEFT" onMouseClicked="#onClick" prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="1">
                      <children>
                         <Text fx:id="tx03" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
                      </children>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <GridPane.margin>
+                        <Insets left="5.0" />
+                     </GridPane.margin>
                   </VBox>
-                  <VBox onMouseClicked="#onClick" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                  <VBox alignment="CENTER_LEFT" onMouseClicked="#onClick" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <children>
                         <Text fx:id="tx04" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
                      </children>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <GridPane.margin>
+                        <Insets left="5.0" />
+                     </GridPane.margin>
                   </VBox>
-                  <VBox onMouseClicked="#onClick" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                  <VBox alignment="CENTER_LEFT" onMouseClicked="#onClick" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
                      <children>
                         <Text fx:id="tx05" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
                      </children>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <GridPane.margin>
+                        <Insets left="5.0" />
+                     </GridPane.margin>
                   </VBox>
-                  <VBox onMouseClicked="#onClick" prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="2">
+                  <VBox alignment="CENTER_LEFT" onMouseClicked="#onClick" prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="2">
                      <children>
                         <Text fx:id="tx06" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
                      </children>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <GridPane.margin>
+                        <Insets left="5.0" />
+                     </GridPane.margin>
                   </VBox>
-                  <VBox onMouseClicked="#onClick" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                  <VBox alignment="CENTER_LEFT" onMouseClicked="#onClick" prefHeight="80.0" prefWidth="193.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                      <children>
                         <Text fx:id="tx07" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
                      </children>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <GridPane.margin>
+                        <Insets left="5.0" />
+                     </GridPane.margin>
                   </VBox>
-                  <VBox onMouseClicked="#onClick" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                  <VBox alignment="CENTER_LEFT" onMouseClicked="#onClick" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
                      <children>
                         <Text fx:id="tx08" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
                      </children>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <GridPane.margin>
+                        <Insets left="5.0" />
+                     </GridPane.margin>
                   </VBox>
                </children>
             </GridPane>
@@ -83,6 +144,12 @@
                <children>
                   <Button mnemonicParsing="false" onAction="#getChoosenDock" text="Return To" />
                </children>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+               <padding>
+                  <Insets top="10.0" />
+               </padding>
             </HBox>
          </children>
       </VBox>
